<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/zeft"
            app:startDestination="@id/topAnimeBate5a5">


    <fragment android:id="@+id/topAnimeBate5a5" android:name="com.sam.animesta.navigation.TopAnimeBate5a5Fragment"
              android:label="fragment_top_anime_bate5a5" tools:layout="@layout/fragment_top_anime_bate5a5">
        <action android:id="@+id/action_topAnimeBate5a5_to_kometra" app:destination="@id/kometra"/>
    </fragment>
    <fragment android:id="@+id/kometra" android:name="com.sam.animesta.navigation.KometraFragment"
              android:label="fragment_kometra" tools:layout="@layout/fragment_kometra">
        <action android:id="@+id/action_kometra_to_shamama" app:destination="@id/shamama"/>
    </fragment>
    <fragment android:id="@+id/shamama" android:name="com.sam.animesta.navigation.ShamamaFragment"
              android:label="fragment_shamama" tools:layout="@layout/fragment_shamama"/>
</navigation>